Fix spacing of the 'default room' button so it doesnt crop over other cards.

--- a/client/src/app/home/home.component.css
+++ b/client/src/app/home/home.component.css
@@ -41,7 +41,10 @@
     right: 40px;
     bottom: 25px;
   }
-}
-.defaultRoomButton{
 
+  .mat-card.roomHeading {
+    padding-bottom: 50px;
+  }
 }
+
+
